bpk-lib/crates/macbat/macros/tests/trybuild_negative/subscription_missing_input.stderr
error: missing required key `input`
 --> tests/trybuild_negative/subscription_missing_input.rs:2:10
  |
2 | #[derive(Subscription)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Subscription` (in Nightly builds, run with -Z macro-backtrace for more info)
