bpk-lib/crates/macbat/macros/tests/trybuild_negative/subscription_missing_input.rs
use macbat::Subscription;
#[derive(Subscription)]
#[batpak(error = StoreError)]
#[batpak(event = Ev, handler = on_ev)]
struct S {
    a: u8,
}
fn main() {}
